--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ p {
 
 #features {
     top:0;
-    height: 400px;
+    height: 300px;
     margin-top: 20px;
     width: 250px;
     border-radius: 5px;
@@ -64,15 +64,15 @@ p {
 }
 
 #legend {
-    padding: 10px;
+    padding: 0px 10px 10px 10px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     line-height: 2rem;
-    height: 220px;
+    height: 280px;
     margin-bottom: 40px;
     width: 150px;
-    font-size: 18px;
+    font-size: 15px;
     border-radius: 5px;
-    text-align: center;
+    text-align: left;
 }
 
 #information {
