--- a/css/style2.css
+++ b/css/style2.css
@@ -53,7 +53,7 @@ p {
 
 #features {
     top:0;
-    height: 400px;
+    height: 270px;
     margin-top: 20px;
     width: 250px;
     border-radius: 5px;
@@ -63,7 +63,7 @@ p {
 }
 
 #legend {
-    padding: 10px;
+    padding: 0 10px 10px 10px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     line-height: 2rem;
     height: 280px;
@@ -71,7 +71,7 @@ p {
     width: 150px;
     font-size: 12px;
     border-radius: 5px;
-    text-align: center;
+    text-align: left;
 }
 
 #information {
